--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -10,7 +10,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
         <fragment
             android:id="@+id/map"
             android:name="com.google.android.gms.maps.SupportMapFragment"
@@ -40,14 +39,26 @@
                 android:textSize="50sp" />
         </RelativeLayout>
 
-        <com.quinny898.library.persistentsearch.SearchBox
-            android:layout_margin="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+        <LinearLayout
+            android:orientation="vertical"
+            android:background="@android:color/background_light"
+            android:layout_margin="7dp"
             android:layout_alignParentTop="true"
-            android:id="@+id/searchbox"
-            />
-
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <AutoCompleteTextView
+                android:id="@+id/autocomplete_places"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:hint="@string/autocomplete_hint"
+                android:singleLine="true" />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:src="@drawable/powered_by_google_light" />
+        </LinearLayout>
 
     </RelativeLayout>
 
